--- a/temp1.html
+++ b/temp1.html
@@ -12,10 +12,17 @@
   <body>
 	  <div class="page_wrapper">
     <header> 
-      <a href="index.html" id="logo"> 
+		<nav class="top-nav">
+		<ul class="n5">
+			<li><a href="#">Rentals</a></li>
+			<li><a href="#">Weather</a></li>
+			<li><a class="top-search"></a><input type="search" placeholder="search"></li>
+		</ul>
+		</nav>
+		<a href="index.html" id="logo"> 
         
-      <h1>Oak City Template</h1>
-      <h2>Todd Bennett | Designer</h2>
+      <h1 id="temph1">Oak City Template</h1>
+      <h2 id="temph2">Todd Bennett | Designer</h2>
         </a>
         <nav class="main-nav">
           <ul class="n5">
@@ -27,6 +34,17 @@
           </ul>
         </nav>
       </header>
+	  </div>
+	  <div class="main-content">
+		  <img src ="img/pier.jpg" class="content-img">
+		  <p class="content-p">Photo booth ramps next level banh mi drinking vinegar ennui whatever. Sartorial tumeric bespoke cloud bread 3 wolf moon thundercats selvage fanny pack godard truffaut wolf YOLO brunch you probably haven't heard of them. Intelligentsia lumbersexual blue bottle whatever meditation.<br>
+Oh. You need a little dummy text for your mockup? How quaint.<br>
+
+I bet you’re still using Bootstrap too…</p>
+		  
+		  <img src="img/orange_umbrella.jpg" class="content-img">
+		  <p class="content-p" id="p2">Narwhal viral hoodie tilde. Direct trade kombucha narwhal pickled seitan forage ethical literally 90's vinyl snackwave kitsch art party flexitarian edison bulb. Sartorial heirloom 3 wolf moon fixie lomo jianbing. Aesthetic quinoa lo-fi, hashtag whatever tacos chambray. Etsy vinyl vexillologist, keytar flannel tacos synth freegan gastropub butcher selfies church-key brunch post-ironic. Shaman XOXO try-hard dreamcatcher ethical selvage vinyl. Actually tumblr edison bulb taiyaki, tattooed affogato activated charcoal. Lomo tousled pork belly letterpress raw denim schlitz blue bottle man bun street art swag scenester bitters. Church-key iceland affogato asymmetrical +1 la croix kickstarter mlkshk photo booth activated charcoal keytar butcher lumbersexual portland. La croix cloud bread organic austin kale chips. Humblebrag man bun shaman vape farm-</p>
+	  
 	  </div>
     <footer>
       <a href="http://twitter.com/toddbennett1"> <img src="img/twitter-wrap.png" class="social-icon"></a>
